Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNjQ9ViZcgOkZAumuSzIwNU",
+      "authorship_tag": "ABX9TyNyK0x4Fnmwsartnn+OY5B7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4895,15 +4895,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "YljgHGB20p-z"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# タプル tuple\n",
@@ -4945,10 +4936,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "MW4PBj0KSTca",
-        "outputId": "3cd14371-7c3f-446c-b97c-400f721ff413",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3cd14371-7c3f-446c-b97c-400f721ff413"
       },
       "source": [
         "# 重複あり全探索 2^n\n",
@@ -4991,10 +4982,10 @@
       ],
       "metadata": {
         "id": "QNN-nWJBW7Gp",
-        "outputId": "83240856-87a9-4c54-d2fb-9586ddd7a45f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "83240856-87a9-4c54-d2fb-9586ddd7a45f"
       },
       "execution_count": 3,
       "outputs": [
@@ -5009,72 +5000,68 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "source": [
+        "# 関数の型は次のように書く\n",
+        "# removeNonUppercase :: [Char] -> [Char]\n",
+        "# removeNonUppercase st = [ c | c <- st, c `elem` ['A'..'Z']]\n",
+        "# ここで、[Char] -> [Char] というのは string を受けて、 string を返す、という意味\n",
+        "# 引数が 3個とかだと次のようになる\n",
+        "# addThree :: Int -> Int -> Int -> Int\n",
+        "# addThree x y z = x + y + z\n",
+        "# 最後の  -> Int が返り値で、その前の 3個が引数"
+      ],
       "metadata": {
         "id": "4ukpwwdpRz4P"
       },
-      "source": [
-        "# 関数の型について"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "hBioXNVtLz_Z"
-      },
-      "source": [
-        "関数の型は次のように書く。\n",
-        "\n",
-        "removeNonUppercase :: [Char] -> [Char]\n",
-        "\n",
-        "removeNonUppercase st = [ c | c <- st, c `elem` ['A'..'Z']]\n",
-        "\n",
-        "ここで、[Char] -> [Char] というのは string を受けて、 string を返す、という意味。\n",
-        "\n",
-        "引数が 3個とかだと次のようになる。\n",
-        "\n",
-        "addThree :: Int -> Int -> Int -> Int\n",
-        "\n",
-        "addThree x y z = x + y + z\n",
-        "\n",
-        "最後の  -> Int が返り値で、その前の 3個が引数。\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "H6EC7u_3T5SF"
-      },
-      "source": [
-        "!ghc -e 'let factorial n = product [1..n] in factorial 50'"
-      ],
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "p6UOG8fJZu20"
+        "id": "H6EC7u_3T5SF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e01788b3-989d-4ad6-c518-ff0550f8b598"
       },
       "source": [
-        "上記の factorial のタイプは\n",
-        "\n",
-        "Integer -> Integer\n",
-        "\n",
-        "で Int でないのは、Integerの方が大きな数を扱えるから。\n",
-        "\n",
-        "効率は Int の方がよい。\n",
-        "\n"
+        "!ghc -e 'let factorial n = product [1..n] in factorial 50'"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "30414093201713378043612608166064768844377641568960512000000000000\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
+      "source": [
+        "# 上記の factorial のタイプは\n",
+        "# Integer -> Integer\n",
+        "# で Int でないのは、Integerの方が大きな数を扱えるから\n",
+        "# 効率は Int の方がよい"
+      ],
       "metadata": {
-        "id": "fkaU3elEAG9U"
+        "id": "p6UOG8fJZu20"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fkaU3elEAG9U",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "74cb7f56-aa13-4b4c-dbba-6cb6721a0ee3"
       },
       "source": [
         "# 実験\n",
@@ -5083,13 +5070,32 @@
         "# 次のは pi が Int でないのでエラーになる\n",
         "!ghc -e 'let {circumference :: Int -> Int; circumference r = 2 * pi * r} in circumference 4'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "25.132742\n",
+            "25.132741228718345\n",
+            "\n",
+            "<interactive>:0:57: error:\n",
+            "    • No instance for (Floating Int) arising from a use of ‘pi’\n",
+            "    • In the second argument of ‘(*)’, namely ‘pi’\n",
+            "      In the first argument of ‘(*)’, namely ‘2 * pi’\n",
+            "      In the expression: 2 * pi * r\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ts4sqEknaQK9"
+        "id": "Ts4sqEknaQK9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "42c4075a-a8a7-4f22-a585-8e3231de8cb3"
       },
       "source": [
         "# 実験 \n",
@@ -5099,49 +5105,82 @@
         "!ghc -e ':t exp'\n",
         "!ghc -e ':t exp 1'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.141592653589793\n",
+            "2.718281828459045\n",
+            "pi :: Floating a => a\n",
+            "exp :: Floating a => a -> a\n",
+            "exp 1 :: Floating a => a\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZeyNRMCfjPe6"
+        "id": "ZeyNRMCfjPe6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ced12285-9fa0-4e16-92c0-035e5e31f5f0"
       },
       "source": [
         "!ghc -e ':t exp'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "exp :: Floating a => a -> a\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "YaepHxwnjoH7"
+        "id": "YaepHxwnjoH7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bcbe2602-8c7a-4f69-c469-e28d68178a50"
       },
       "source": [
         "!ghc -e ':t (==)'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(==) :: Eq a => a -> a -> Bool\n"
+          ]
+        }
+      ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "source": [
+        "# # `=>` 記号\n",
+        "# 型制約、型クラス制約 class constraint\n",
+        "# 例えば、(==) について言えば\n",
+        "# (==) :: Eq a => a -> a -> Bool\n",
+        "# (==) 関数は、2つの値 (a -> a) を引数としてとり、真偽値 Bool を返り値として返すが、この 2つの値は、Eq 型クラスに属していなければならない\n",
+        "# というように読む"
+      ],
       "metadata": {
         "id": "5LiFuyVIgD9T"
       },
-      "source": [
-        "# `=>` 記号\n",
-        "型制約、型クラス制約 class constraint\n",
-        "\n",
-        "例えば、(==) について言えば\n",
-        "\n",
-        "(==) :: Eq a => a -> a -> Bool\n",
-        "\n",
-        "(==) 関数は、2つの値 (a -> a) を引数としてとり、真偽値 Bool を返り値として返すが、この 2つの値は、Eq 型クラスに属していなければならない。\n",
-        "\n",
-        "というように読む。\n",
-        "\n"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -5155,165 +5194,297 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "source": [
+        "# 上記の結果\n",
+        "# head :: [a] -> a\n",
+        "# の a は、型変数と呼ばれ、これの場合は、型クラス制約がなければなんでもいい、という意味\n",
+        "# 型変数がある関数は 多形性 polymorphic 関数を呼ばれる"
+      ],
       "metadata": {
         "id": "be8RDfXX7kiU"
       },
-      "source": [
-        "上記の結果\n",
-        "\n",
-        "head :: [a] -> a\n",
-        "\n",
-        "の a は、型変数と呼ばれ、これの場合は、型クラス制約がなければなんでもいい、という意味。\n",
-        "\n",
-        "型変数がある関数は 多形性 polymorphic 関数を呼ばれる。\n",
-        "\n"
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "h2ZekLvB8e52"
+        "id": "h2ZekLvB8e52",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3b96d9a6-f1a2-4f73-a023-2a2b1624e391"
       },
       "source": [
         "!ghc -e ':t fst'"
       ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fst :: (a, b) -> a\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 上記の結果\n",
+        "# fst :: (a, b) -> a\n",
+        "# は 2つの要素からなるタプルを引数として、そのタプルの中の最初の要素を返す、という意味"
+      ],
+      "metadata": {
+        "id": "u4f61nDwXFQv"
+      },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "u4f61nDwXFQv"
+        "id": "DPvmdZwelWCQ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0333156c-2bac-4f47-bb37-d16ec8070e88"
       },
       "source": [
-        "上記の結果\n",
-        "\n",
-        "fst :: (a, b) -> a\n",
-        "\n",
-        "は 2つの要素からなるタプルを引数として、そのタプルの中の最初の要素を返す、という意味。"
+        "!ghc -e ':t elem'"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "elem :: (Eq a, Foldable t) => a -> t a -> Bool\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DPvmdZwelWCQ"
-      },
-      "source": [
-        "!ghc -e ':t elem'"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "HeUocyAAlw4G"
+        "id": "HeUocyAAlw4G",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "01dcb8ba-aa67-4fe1-9225-58594034f951"
       },
       "source": [
         "!ghc -e ':t (>)'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(>) :: Ord a => a -> a -> Bool\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TmtVbaYmmCBw"
+        "id": "TmtVbaYmmCBw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c896805a-f4c2-401d-95c3-0840559b84f9"
       },
       "source": [
         "!ghc -e ':t compare'\n",
         "!ghc -e 'compare \"Abrakadabra\" \"Zebra\"'"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "yp8bwfCfmNAe"
-      },
-      "source": [
-        "!ghc -e ':t show'"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "vkLNASfPmtTD"
-      },
-      "source": [
-        "!ghc -e 'show 3'\n",
-        "!ghc -e 'show 5.334'\n",
-        "!ghc -e 'show True'"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "OvlvXtZKoHib"
-      },
-      "source": [
-        "Read 型クラスは Show 型クラスの反対で、read 関数は string を Read 型クラスへ変換する。"
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "compare :: Ord a => a -> a -> Ordering\n",
+            "LT\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ask7eBwBoTMs"
+        "id": "yp8bwfCfmNAe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "66a08d35-9b8d-495d-dd78-d55a68b9a107"
       },
       "source": [
-        "!ghc -e ':t read'"
+        "!ghc -e ':t show'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "show :: Show a => a -> String\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1Y0Slc2xmvZg"
+        "id": "vkLNASfPmtTD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4b6e5692-eef1-48eb-b1fa-ae056b241077"
+      },
+      "source": [
+        "!ghc -e 'show 3'\n",
+        "!ghc -e 'show 5.334'\n",
+        "!ghc -e 'show True'\n",
+        "!ghc -e 'show [1,2,3]'"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\"3\"\n",
+            "\"5.334\"\n",
+            "\"True\"\n",
+            "\"[1,2,3]\"\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Read 型クラスは Show 型クラスの反対で、read 関数は string を Read 型クラスへ変換する。\n",
+        "!ghc -e ':t read'"
+      ],
+      "metadata": {
+        "id": "OvlvXtZKoHib",
+        "outputId": "001dbdf1-68c7-440f-a3d6-3a2e1baf17a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "read :: Read a => String -> a\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1Y0Slc2xmvZg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4b077628-5d17-46ba-d14a-ee014bf1b0f1"
       },
       "source": [
         "!ghc -e 'read \"True\" || False'\n",
         "!ghc -e 'read \"8.2\" + 3.8'\n",
         "!ghc -e 'read \"5\" - 2'\n",
-        "!ghc -e 'read \"[1,2,3,4]\" ++ [3]'\n"
+        "!ghc -e 'read \"[1,2,3,4]\" ++ [3]'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "12.0\n",
+            "3\n",
+            "[1,2,3,4,3]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UyaT16a_phvc"
+        "id": "UyaT16a_phvc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8a6d9387-04db-480a-bab6-ded9463086cb"
       },
       "source": [
         "# 実験 なにに変換していいかわからないとエラーになる\n",
         "!ghc -e 'read \"4\"'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<interactive>: Prelude.read: no parse\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4yKNA9s2Vgku"
+        "id": "4yKNA9s2Vgku",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7b02a121-a627-4850-c47c-e44ba172a57e"
       },
       "source": [
         "!ghc -e 'read \"4\"::Int'\n",
         "!ghc -e '(read::String -> Int) \"4\"'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "YljgHGB20p-z"
+      }
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mcMTlNxfmyNH"
+        "id": "mcMTlNxfmyNH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "619e796d-6d2d-494e-ecda-50cc91a74fe9"
       },
       "source": [
         "!ghc -e 'read \"5\"::Int'\n",
@@ -5325,8 +5496,22 @@
         "# 次のはエラーになる\n",
         "!ghc -e $'read \"(120, \\'a\\')\"::(Char, Char)'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "5.0\n",
+            "20.0\n",
+            "[1,2,3,4]\n",
+            "(3,'a')\n",
+            "[1,2,3,4,80]\n",
+            "<interactive>: Prelude.read: no parse\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
