--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOkxRfAhfYrE4nSjEaIyLbE",
+      "authorship_tag": "ABX9TyPciMUsK8wqI9Jaxj6DhiLP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5505,21 +5505,13 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "YljgHGB20p-z"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "3i52Ibk2rpeG"
       },
       "source": [
-        "# Enum は型クラス。型クラスの情報は :k か :i で知る\n",
+        "# Enum は型クラス\n",
+        "# 型クラスの情報は :k か :i で知ることができる\n",
         "# !ghc -e ':t Enum'\n",
         "!ghc -e ':k Enum'\n",
         "# !ghc -e ':i Enum'"
@@ -5545,7 +5537,7 @@
         "!ghc -e 'succ LT'\n",
         "!ghc -e 'succ GT'"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5579,7 +5571,7 @@
         "!echo\n",
         "!ghc -e ':t minBound'"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5608,7 +5600,7 @@
         "# tupleのmaxBound\n",
         "!ghc -e 'maxBound :: (Bool, Int, Char)'"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5638,7 +5630,7 @@
         "!echo\n",
         "!ghc -e ':t (*)'"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5668,7 +5660,7 @@
         "# 次のはエラーになる\n",
         "!ghc -e ':t (5::Int)*(3::Integer)'"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5687,7 +5679,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "4sCgGgi2-mkn",
-        "outputId": "74a30507-da4d-47cd-cfe9-2b95bd9651d3",
+        "outputId": "e89d6bae-5214-46df-9ebb-ba79c1b59069",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -5697,7 +5689,7 @@
         "!ghci -e '(length [1,2,3,4] + 3.2)' # エラー\n",
         "!ghci -e 'fromIntegral (length [1,2,3,4]) + 3.2' #=> 7.2"
       ],
-      "execution_count": 13,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -5734,7 +5726,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5757,7 +5749,7 @@
       "source": [
         "!runghc temp.hs"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5771,37 +5763,24 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "s5mZpt0ZVaVw",
-        "outputId": "7b726460-bc46-4cd7-ac2e-ff8d79ae791b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "!ghc -e $'let {lucky 7 = \"LUCKY NUMBER SEVEN!!!!\"; lucky x = \"Sorry, you\\'re out of luck, pal!!!!\" } in print $ lucky 6'"
-      ],
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\"Sorry, you're out of luck, pal!!!!\"\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "nrp2XHZN_7Gn",
-        "outputId": "e7beed40-5d58-435f-a49e-5e2812875fc1",
+        "outputId": "f3a1b56c-1d9b-4b92-e36a-d5c3e897e978",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "!ghc -e $'let {sayMe :: (Integral a) => a -> String; sayMe 1 = \"One!\"; sayMe 2 = \"Two!\"; sayMe 3 = \"Three!\"; sayMe 4 = \"Four!\"; sayMe 5 = \"Five!\"; sayMe x = \"Not between 1 and 5\"; } in print $ sayMe 8'\n"
+        "# \n",
+        "%%writefile temp.hs\n",
+        "sayMe :: (Integral a) => a -> String\n",
+        "sayMe 1 = \"One!\"\n",
+        "sayMe 2 = \"Two!\"\n",
+        "sayMe 3 = \"Three!\"\n",
+        "sayMe 4 = \"Four!\"\n",
+        "sayMe 5 = \"Five!\"\n",
+        "sayMe x = \"Not between 1 and 5\"\n",
+        "\n",
+        "main = putStrLn $ sayMe 5"
       ],
       "execution_count": 17,
       "outputs": [
@@ -5809,10 +5788,42 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\"Not between 1 and 5\"\n"
+            "Overwriting temp.hs\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!runghc temp.hs"
+      ],
+      "metadata": {
+        "id": "fJUp8ypjx4m2",
+        "outputId": "23856978-4d8c-45bb-a3aa-a76967a07ac6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Five!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "YljgHGB20p-z"
+      }
     },
     {
       "cell_type": "code",
@@ -5824,9 +5835,11 @@
         }
       },
       "source": [
+        "# !ghc -e $'let { factorial :: (Integral a) => a -> a; factorial 0 = 1; factorial n = n * factorial (n - 1); } in print $ factorial 42'\n",
+        "\n",
         "!ghc -e $'let { factorial :: (Integral a) => a -> a; factorial 0 = 1; factorial n = n * factorial (n - 1); } in print $ factorial 42'\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5849,7 +5862,7 @@
       "source": [
         "!ghc -e $'let {addVectors :: (Num a) => (a, a) -> (a, a) -> (a, a); addVectors a b = (fst a + fst b, snd a + snd b);} in print $ addVectors (1,2) (3, 4)'\n"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5872,7 +5885,7 @@
       "source": [
         "!ghc -e $'let { addVectors :: (Num a) => (a, a) -> (a, a) -> (a, a); addVectors (x1, y1) (x2, y2) = (x1 + x2, y1 + y2);} in addVectors (1, 2) (3, 4)'\n"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5897,7 +5910,7 @@
         "!ghc -e $'let { second :: (a, b, c) -> b ; second (_, y, _) = y; } in print $ second (1,2,3)'\n",
         "!ghc -e $'let { third :: (a, b, c) -> c; third (_, _, z) = z; } in print $ third (1,2,3)'"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5923,7 +5936,7 @@
         "!ghc -e $'let xs = [(1,3), (4,3), (2,4), (5,3), (5,6), (3,1)] in [a+b | (a,b) <- xs]'\n",
         "!ghc -e $'let xs = [(1,3), (4,3), (2,4), (5,3), (5,6), (3,1)] in print  [a+b | (a,b) <- xs]'\n"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
