Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPciMUsK8wqI9Jaxj6DhiLP",
+      "authorship_tag": "ABX9TyNpwmvLYpgz6AzafVS/Ma6W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5689,7 +5689,7 @@
         "!ghci -e '(length [1,2,3,4] + 3.2)' # エラー\n",
         "!ghci -e 'fromIntegral (length [1,2,3,4]) + 3.2' #=> 7.2"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5782,7 +5782,7 @@
         "\n",
         "main = putStrLn $ sayMe 5"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5805,13 +5805,65 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Five!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Og34JxEWCBL1",
+        "outputId": "8eb9b8a5-b47c-4ae2-b041-dea5f5acece8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# !ghc -e $'let { factorial :: (Integral a) => a -> a; factorial 0 = 1; factorial n = n * factorial (n - 1); } in print $ factorial 42'\n",
+        "%%writefile temp.hs\n",
+        "factorial :: (Integral a) => a -> a\n",
+        "factorial 0 = 1\n",
+        "factorial n = n * factorial (n - 1)\n",
+        "\n",
+        "main = print $ factorial 42"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.hs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!runghc temp.hs"
+      ],
+      "metadata": {
+        "id": "j1QuSkELO-yB",
+        "outputId": "0e55ee44-cd5b-41b9-da6b-0a8170eb2088",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1405006117752879898543142606244511569936384000000000\n"
           ]
         }
       ]
@@ -5828,31 +5880,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Og34JxEWCBL1",
-        "outputId": "953fdc4c-b428-4396-86df-6c703c9984a3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "# !ghc -e $'let { factorial :: (Integral a) => a -> a; factorial 0 = 1; factorial n = n * factorial (n - 1); } in print $ factorial 42'\n",
-        "\n",
-        "!ghc -e $'let { factorial :: (Integral a) => a -> a; factorial 0 = 1; factorial n = n * factorial (n - 1); } in print $ factorial 42'\n"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1405006117752879898543142606244511569936384000000000\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "fhhacyZMDaRZ",
         "outputId": "654a5650-e5d7-4b95-dfdc-25a11c3f665a",
         "colab": {
@@ -5860,7 +5887,9 @@
         }
       },
       "source": [
-        "!ghc -e $'let {addVectors :: (Num a) => (a, a) -> (a, a) -> (a, a); addVectors a b = (fst a + fst b, snd a + snd b);} in print $ addVectors (1,2) (3, 4)'\n"
+        "# !ghc -e $'let {addVectors :: (Num a) => (a, a) -> (a, a) -> (a, a); addVectors a b = (fst a + fst b, snd a + snd b);} in print $ addVectors (1,2) (3, 4)'\n",
+        "%%writefile temp.hs\n",
+        "# !ghc -e $'let {addVectors :: (Num a) => (a, a) -> (a, a) -> (a, a); addVectors a b = (fst a + fst b, snd a + snd b);} in print $ addVectors (1,2) (3, 4)'\n"
       ],
       "execution_count": null,
       "outputs": [
@@ -5872,6 +5901,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!runghc temp.hs"
+      ],
+      "metadata": {
+        "id": "zYdoBrilPThs"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
