--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNpwmvLYpgz6AzafVS/Ma6W",
+      "authorship_tag": "ABX9TyNuWy7OhPx2xGTsFLmKIkJ6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "%%capture\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": 1,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -5834,7 +5834,7 @@
         "\n",
         "main = print $ factorial 42"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5857,7 +5857,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5869,19 +5869,10 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "YljgHGB20p-z"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "fhhacyZMDaRZ",
-        "outputId": "654a5650-e5d7-4b95-dfdc-25a11c3f665a",
+        "outputId": "9946860a-a92f-4aa9-cb13-36bd5653b10e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -5889,9 +5880,35 @@
       "source": [
         "# !ghc -e $'let {addVectors :: (Num a) => (a, a) -> (a, a) -> (a, a); addVectors a b = (fst a + fst b, snd a + snd b);} in print $ addVectors (1,2) (3, 4)'\n",
         "%%writefile temp.hs\n",
-        "# !ghc -e $'let {addVectors :: (Num a) => (a, a) -> (a, a) -> (a, a); addVectors a b = (fst a + fst b, snd a + snd b);} in print $ addVectors (1,2) (3, 4)'\n"
+        "addVectors :: (Num a) => (a, a) -> (a, a) -> (a, a)\n",
+        "addVectors a b = (fst a + fst b, snd a + snd b)\n",
+        "\n",
+        "main =  print $ addVectors (1,2) (3, 4)\n"
       ],
-      "execution_count": null,
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.hs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!runghc temp.hs"
+      ],
+      "metadata": {
+        "id": "zYdoBrilPThs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "21d3c6a0-a49d-4c41-c33d-6062e0a4d1c7"
+      },
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -5904,28 +5921,44 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "!runghc temp.hs"
-      ],
-      "metadata": {
-        "id": "zYdoBrilPThs"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "metadata": {
         "id": "hxV1UAdzERoS",
-        "outputId": "81c2f4a3-7457-41ba-bf7b-bab2bfe92210",
+        "outputId": "a15bc0cc-5930-450f-feaa-620c7e144afa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "!ghc -e $'let { addVectors :: (Num a) => (a, a) -> (a, a) -> (a, a); addVectors (x1, y1) (x2, y2) = (x1 + x2, y1 + y2);} in addVectors (1, 2) (3, 4)'\n"
+        "# !ghc -e $'let { addVectors :: (Num a) => (a, a) -> (a, a) -> (a, a); addVectors (x1, y1) (x2, y2) = (x1 + x2, y1 + y2);} in addVectors (1, 2) (3, 4)'\n",
+        "%%writefile temp.hs\n",
+        "addVectors :: (Num a) => (a, a) -> (a, a) -> (a, a)\n",
+        "addVectors (x1, y1) (x2, y2) = (x1 + x2, y1 + y2)\n",
+        "main = print $ addVectors (1, 2) (3, 4)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.hs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!runghc temp.hs"
+      ],
+      "metadata": {
+        "outputId": "c18bc791-ab19-4aaf-b39d-4d038dd8a937",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CCjFx9O3j2pp"
+      },
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -5946,6 +5979,7 @@
         }
       },
       "source": [
+        "# first, second, third を実装する\n",
         "!ghc -e $'let { first :: (a, b, c) -> a; first (x, _, _) = x; } in print $ first (1,2,3)'\n",
         "!ghc -e $'let { second :: (a, b, c) -> b ; second (_, y, _) = y; } in print $ second (1,2,3)'\n",
         "!ghc -e $'let { third :: (a, b, c) -> c; third (_, _, z) = z; } in print $ third (1,2,3)'"
@@ -5973,8 +6007,9 @@
         }
       },
       "source": [
+        "# pair をそれぞれ合計したリスト\n",
         "!ghc -e $'let xs = [(1,3), (4,3), (2,4), (5,3), (5,6), (3,1)] in [a+b | (a,b) <- xs]'\n",
-        "!ghc -e $'let xs = [(1,3), (4,3), (2,4), (5,3), (5,6), (3,1)] in print  [a+b | (a,b) <- xs]'\n"
+        "!ghc -e $'let xs = [(1,3), (4,3), (2,4), (5,3), (5,6), (3,1)] in print  [a+b | (a,b) <- xs]'"
       ],
       "execution_count": null,
       "outputs": [
@@ -5987,6 +6022,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "YljgHGB20p-z"
+      }
     },
     {
       "cell_type": "code",
