--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPpNIWZSEF4hXmKrLVXqFqD",
+      "authorship_tag": "ABX9TyNqiN4QZOUNovlr70tdOtQ/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "%%capture\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": 1,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -6024,33 +6024,23 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "YljgHGB20p-z"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# flatten\n",
         "# concat もしくは map concat で flatten できる\n",
         "%%writefile temp.hs\n",
-        "\n",
         "main = do\n",
-        "    let x = [[[1]]]\n",
-        "    print $ map concat x"
+        "    let x = [(1,2),(3,4)]\n",
+        "    print $ map (\\(a,b) -> a + b) x"
       ],
       "metadata": {
         "id": "TnfMlT6nKB51",
-        "outputId": "d6ed5cc6-4940-46ab-f614-cc8af2605117",
+        "outputId": "f39bdc2f-47c3-475e-93db-733eba18f64a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -6068,18 +6058,18 @@
       ],
       "metadata": {
         "id": "-YY3gq4QGj5I",
-        "outputId": "21a9ecf5-cc3d-4410-f2e6-ec377efaee3f",
+        "outputId": "7481806f-73da-4f03-bc57-cc9b7146957a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[1]]\n"
+            "[3,7]\n"
           ]
         }
       ]
@@ -6089,20 +6079,116 @@
       "source": [
         "# flatten\n",
         "# concat もしくは map concat で flatten できる\n",
-        "#!echo -e '[(1,3), (4,3), (2,4), (5,3), (5,6), (3,1)]' | ghc -e $'getContents >>= map (\\(a,b) -> a+b)'\n",
-        "# !echo -e '10 20\\n30 40\\n50 60' | ghc -e 'getContents >>= print . map (map (read::String -> Int) . words) . lines'\n",
-        "# !echo -e '[(1,3), (4,3), (2,4), (5,3), (5,6), (3,1)]' | ghc -e 'getContents >>= map (read::String -> ([(Int, Int)]) . lines'\n",
+        "%%writefile temp.hs\n",
+        "flatten = (\\(a,b) -> a + b)\n",
+        "\n",
+        "main = do\n",
+        "    let x = [(1,2),(3,4)]\n",
+        "    print $ map flatten x"
+      ],
+      "metadata": {
+        "outputId": "bcaaf51a-a2a4-473a-9a54-cfe12daf660f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lhz7UEDlY1yE"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.hs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!runghc temp.hs"
+      ],
+      "metadata": {
+        "outputId": "d03db2cf-c715-44e6-812f-6ca0f754d9f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jxOHfSJ0Y1yG"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[3,7]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "YljgHGB20p-z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile temp.hs\n",
+        "main = do\n",
+        "    x <- readLn\n",
+        "    print x"
+      ],
+      "metadata": {
+        "id": "taBmHrJtaLHw",
+        "outputId": "15b7b2e5-05c6-486a-cfdb-058549bcd383",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.hs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# !echo -e '[(1,3), (4,3), (2,4), (5,3), (5,6), (3,1)]' | runghc temp.hs"
+      ],
+      "metadata": {
+        "id": "-XtFOd8paLDJ"
+      },
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# flatten\n",
+        "# concat もしくは map concat で flatten できる\n",
         "!echo -e '[(1,3), (4,3), (2,4), (5,3), (5,6), (3,1)]' | ghc -e 'getContents >>= print . map (read::String -> [(Int, Int)]) . lines'\n",
         "!echo -e '[(1,3), (4,3), (2,4), (5,3), (5,6), (3,1)]' | ghc -e 'getContents >>= print. map (\\(a,b) -> a+b) . concat . map (read::String -> [(Int, Int)]) . lines'"
       ],
       "metadata": {
         "id": "jQqSUGdlKIJ5",
-        "outputId": "a07fc835-96bd-4399-fcd0-021819db1553",
+        "outputId": "46556da4-4edf-481f-9e05-a49ba663f03b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -6117,7 +6203,9 @@
     {
       "cell_type": "code",
       "source": [
-        "!echo -e '[(1,3), (4,3), (2,4), (5,3), (5,6), (3,1)]'"
+        "# !echo -e '[(1,3), (4,3), (2,4), (5,3), (5,6), (3,1)]' | ghc -e 'getContents >>= print. map (\\(a,b) -> a+b) . concat . map (read::String -> [(Int, Int)]) . lines'\n",
+        "%%writefile temp.hs\n",
+        "getContents >>= print. map (\\(a,b) -> a+b) . concat . map (read::String -> [(Int, Int)]) . lines'\n"
       ],
       "metadata": {
         "id": "ylVf5TlU9pmr",
@@ -6136,6 +6224,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!runghc temp.hs"
+      ],
+      "metadata": {
+        "id": "lw2gvvLSZyGy"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
