Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPwVgV5YqmWAuR3v1VtAx/S",
+      "authorship_tag": "ABX9TyMy744jdLKMccTOSp48i3o+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
         "%%capture\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": 1,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -222,20 +222,20 @@
     {
       "cell_type": "code",
       "source": [
-        "# 実験 interact\n",
+        "# 実験 \n",
         "%%writefile temp.hs\n",
         "main = do\n",
-        "    input <- interact\n",
+        "    input <- getContents\n",
         "    print input"
       ],
       "metadata": {
         "id": "OrNnuvmjU1I4",
-        "outputId": "635acb9f-8069-4582-a613-d5610a18951a",
+        "outputId": "4fbe2e6f-ecdf-48be-f512-08aaad889ed5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 52,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,30 +253,122 @@
       ],
       "metadata": {
         "id": "QBHJzQkdU5rO",
-        "outputId": "1502fd16-cd11-4bf6-a72d-06e045312e2e",
+        "outputId": "535e10c2-27c6-438a-fd3b-25ed5e180298",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 53,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\n",
-            "temp.hs:2:14: error:\n",
-            "    • Couldn't match expected type ‘IO a0’\n",
-            "                  with actual type ‘(String -> String) -> IO ()’\n",
-            "    • Probable cause: ‘interact’ is applied to too few arguments\n",
-            "      In a stmt of a 'do' block: input <- interact\n",
-            "      In the expression:\n",
-            "        do { input <- interact;\n",
-            "             print input }\n",
-            "      In an equation for ‘main’:\n",
-            "          main\n",
-            "            = do { input <- interact;\n",
-            "                   print input }\n"
+            "\"this is a pen\\n\"\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# !ghc -e \"getContents >>= mapM_ putStrLn.map reverse.lines\"\n",
+        "# ワンライナーにするより別ファイルのプログラムにする方がわかりやすいのでそうする\n",
+        "%%writefile temp.hs\n",
+        "main = getContents >>= mapM_ putStrLn.map reverse.lines"
+      ],
+      "metadata": {
+        "id": "5sj4d1FzM7gn",
+        "outputId": "850a491f-d9f6-4267-b206-c01b82c6a703",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.hs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!echo -e 'this is a pen.\\n 32' | runghc temp.hs"
+      ],
+      "metadata": {
+        "id": "kQr1QwKNNcEd",
+        "outputId": "7129935b-29a2-463b-d8b0-f6c2cc32c384",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            ".nep a si siht\n",
+            "23 \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# !ghc -e \"getContents >>= mapM_ putStrLn.map reverse.lines\"\n",
+        "%%writefile temp.hs\n",
+        "main = do\n",
+        "    input <- getContents\n",
+        "    mapM_ putStrLn $ map reverse $ lines input\n",
+        "    mapM_ (putStrLn.reverse).lines $ input"
+      ],
+      "metadata": {
+        "id": "s_Q8LYuXNpwK",
+        "outputId": "8b415e66-d2c5-4471-92b2-5af08478be90",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.hs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!echo -e 'this is a pen.\\n 32' | runghc temp.hs"
+      ],
+      "metadata": {
+        "id": "oTu3O6NFNpsf",
+        "outputId": "f4179ca5-42ff-4981-b2d2-0595d4d3c22f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            ".nep a si siht\n",
+            "23 \n",
+            ".nep a si siht\n",
+            "23 \n"
           ]
         }
       ]
@@ -297,7 +389,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# echo で複数行の入力も出来る\n",
+        "# echo で複数行の入力が出来る\n",
         "!echo -e 'this is a pen\\nabcdef\\n12345'"
       ],
       "metadata": {
@@ -316,39 +408,6 @@
             "this is a pen\n",
             "abcdef\n",
             "12345\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "KKwu4FRKcsNu",
-        "outputId": "20a7db30-3627-4e28-a3ff-ca62b7fb423d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "# echo と getContents を使う\n",
-        "# 複数行の入力を、lines で行に分け、それぞれの行に map で reverse をかけ、mapM_ で行ごとに出力する\n",
-        "!echo -e 'this is a pen\\nabcdef\\n12345'\n",
-        "!echo\n",
-        "!echo -e 'this is a pen\\n abcdef\\n12345' | ghc -e \"getContents >>=  mapM_ putStrLn . map reverse.lines\""
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "this is a pen\n",
-            "abcdef\n",
-            "12345\n",
-            "\n",
-            "nep a si siht\n",
-            "fedcba \n",
-            "54321\n"
           ]
         }
       ]
@@ -413,27 +472,46 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2d5f57b3-72ec-4fac-9762-46aa67f90790"
+        "outputId": "25a4422b-45fa-427b-a709-e4c2ee44d52c"
       },
       "source": [
         "# 実験 lines の代わりに words を使う\n",
-        "!echo -e 'this is a pen\\nabcdef\\n12345' | ghc -e 'getContents>>= mapM_(putStrLn.reverse).words'\n",
-        "!echo\n",
-        "!echo -e 'this is a pen\\nabcdef\\n12345' | ghc -e 'getContents>>= mapM_ putStrLn.map reverse.words'"
+        "# !echo -e 'this is a pen\\nabcdef\\n12345' | ghc -e 'getContents>>= mapM_(putStrLn.reverse).words'\n",
+        "# !echo -e 'this is a pen\\nabcdef\\n12345' | ghc -e 'getContents>>= mapM_ putStrLn.map reverse.words'\n",
+        "%%writefile temp.hs\n",
+        "main = do\n",
+        "    input <- getContents\n",
+        "    mapM_ putStrLn.map reverse.words $ input"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "siht\n",
-            "si\n",
-            "a\n",
-            "nep\n",
-            "fedcba\n",
-            "54321\n",
-            "\n",
+            "Overwriting temp.hs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!echo -e 'this is a pen\\nabcdef\\n12345' | runghc temp.hs"
+      ],
+      "metadata": {
+        "id": "A6nSpD5kPuz0",
+        "outputId": "bae531a8-6ab5-4667-af8b-7eb3e1ac8787",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "siht\n",
             "si\n",
             "a\n",
@@ -467,6 +545,106 @@
           "name": "stdout",
           "text": [
             "[\"this\",\"is\",\"a\",\"pen\",\"abcdef\",\"12345\"]\n",
+            "[\"this is a pen\",\" abcdef\",\"12345\"]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# !echo -e 'this is a pen\\n abcdef\\n12345' | ghc -e 'getContents>>= print.words'\n",
+        "%%writefile temp.hs\n",
+        "main = do\n",
+        "    input <- getContents\n",
+        "    print.words $ input"
+      ],
+      "metadata": {
+        "id": "oWPt8X1NTjny",
+        "outputId": "ab450c80-8c38-4963-d81d-a954a13ae923",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.hs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!echo -e 'this is a pen\\n abcdef\\n12345' | runghc temp.hs"
+      ],
+      "metadata": {
+        "id": "avOQM44xTjbS",
+        "outputId": "b165f1fe-ba25-4571-ba45-59d822323588",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[\"this\",\"is\",\"a\",\"pen\",\"abcdef\",\"12345\"]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# !echo -e 'this is a pen\\n abcdef\\n12345' | ghc -e 'getContents>>= print.lines'\n",
+        "%%writefile temp.hs\n",
+        "main = do\n",
+        "    input <- getContents\n",
+        "    print.lines $ input"
+      ],
+      "metadata": {
+        "id": "EptxxvD7T_KT",
+        "outputId": "d9339843-633b-4595-e48f-0b0ac9e4f4e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.hs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!echo -e 'this is a pen\\n abcdef\\n12345' | runghc temp.hs"
+      ],
+      "metadata": {
+        "id": "hkqVLmLZT_Gz",
+        "outputId": "cbf3f96c-1053-47de-c75a-037304576018",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
             "[\"this is a pen\",\" abcdef\",\"12345\"]\n"
           ]
         }
@@ -583,25 +761,29 @@
     {
       "cell_type": "code",
       "source": [
-        "# read は使い方にコツが要りそう\n",
+        "# read の使い方\n",
         "!ghc -e 'print \"32\"'\n",
         "!ghc -e 'print ((read::String -> Int) \"32\")'\n",
-        "!ghc -e 'read (\"32\") + 0'"
+        "!ghc -e 'read (\"32\") + 0'\n",
+        "!ghc -e 'print (read \"32\"::Int)'\n",
+        "!ghc -e 'read \"32\"::Int'"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rVwljePQZ4RC",
-        "outputId": "d53cfbed-9a26-4ef9-a003-7c34700167db"
+        "outputId": "0e4e27ca-6ada-4ff5-90d7-c7cc43395fcf"
       },
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\"32\"\n",
+            "32\n",
+            "32\n",
             "32\n",
             "32\n"
           ]
@@ -672,7 +854,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# do を使ってみる\n",
+        "# do を使う\n",
         "%%writefile temp.hs\n",
         "main = do\n",
         "  let fac n = if n == 0 then 1 else n * fac (n-1)  \n",
@@ -722,7 +904,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 定義を外出ししてみる\n",
+        "# 定義を外出しする\n",
         "%%writefile temp.hs\n",
         "fac n = if n == 0 then 1 else n * fac (n-1)  \n",
         "\n",
@@ -880,7 +1062,7 @@
         "outputId": "0cc5482f-1510-474c-cfb7-9102b4a11b2a"
       },
       "source": [
-        "# case 構文を使えるか\n",
+        "# case 構文が使える\n",
         "%%writefile temp.hs\n",
         "fac n = case n of \n",
         "    0 -> 1\n",
@@ -1109,8 +1291,8 @@
         "# ドルマーク $ の使い方\n",
         "%%writefile temp.hs\n",
         "main = do\n",
-        "  print \"Hello\"\n",
-        "  print $ \"hello\" ++ \", haskell\""
+        "    print \"Hello\"\n",
+        "    print $ \"hello\" ++ \", haskell\""
       ],
       "execution_count": null,
       "outputs": [
@@ -1157,7 +1339,7 @@
         "outputId": "a50fa3e6-5588-4ae7-d89b-ccd9d1a84748"
       },
       "source": [
-        "# do の使い方\n",
+        "# do \n",
         "%%writefile temp.hs\n",
         "main =  do\n",
         "    print $ succ 5\n",
@@ -1216,7 +1398,7 @@
         "outputId": "072c05b5-9327-4aaa-cc3c-f10c28abc18c"
       },
       "source": [
-        "# 実験 floor が使えるかどうか\n",
+        "# 実験 floor が使える\n",
         "!ghc -e 'floor(-6.59)' #=> -7"
       ],
       "execution_count": null,
@@ -1346,6 +1528,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "p00GO4dsWCNq"
+      }
     },
     {
       "cell_type": "code",
@@ -1895,6 +2086,56 @@
           "name": "stdout",
           "text": [
             "[1,4,9,16,25,36,49,64,81,100]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 内包表記で受取る\n",
+        "%%writefile temp.hs\n",
+        "main = do\n",
+        "  input <- getContents\n",
+        "  print [ [read x :: Int | x <- words line] | line <- lines input]"
+      ],
+      "metadata": {
+        "id": "txrdy8seLgWe",
+        "outputId": "782533f5-4f07-4f40-827e-bb3c9cf841fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Writing temp.hs\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!echo -e '10 20\\n30 40\\n50 60' | runghc temp.hs"
+      ],
+      "metadata": {
+        "id": "W5fCdxv5Lv7Y",
+        "outputId": "b5932735-b119-4923-cb4a-d6824b7a50c2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[10,20],[30,40],[50,60]]\n"
           ]
         }
       ]
@@ -3097,7 +3338,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3120,7 +3361,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6169,7 +6410,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6192,7 +6433,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
