--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "learnhaskell.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOghDltwxurab1fO+rkvdbH",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPW/rhteRDepmUI8GiTcurK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -197,16 +198,16 @@
       "cell_type": "code",
       "source": [
         "# シェルの echo の出力をパイプ `|` で受ける、標準入力\n",
-        "!echo \"this is a pen\" | ghc -e \"getContents >>= putStrLn\""
+        "!echo -e 'this is a pen' | ghc -e \"getContents >>= putStrLn\""
       ],
       "metadata": {
         "id": "z25E2X5cjh2Y",
-        "outputId": "4af9c5c3-2da4-4e34-9582-9dc029ccf8a9",
+        "outputId": "a87fdfff-79c4-494c-9b9a-88ce639bf36a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,16 +226,16 @@
         "%%writefile temp.hs\n",
         "main = do\n",
         "    input <- getContents\n",
-        "    print input"
+        "    print $ lines input"
       ],
       "metadata": {
         "id": "OrNnuvmjU1I4",
-        "outputId": "4fbe2e6f-ecdf-48be-f512-08aaad889ed5",
+        "outputId": "e2ab2932-2ac5-45d7-ca86-06ed921d4c38",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,22 +249,22 @@
     {
       "cell_type": "code",
       "source": [
-        "!echo \"this is a pen\" | runghc temp.hs"
+        "!echo -e '[1 (2) 3,4 [8]]' | runghc temp.hs"
       ],
       "metadata": {
         "id": "QBHJzQkdU5rO",
-        "outputId": "535e10c2-27c6-438a-fd3b-25ed5e180298",
+        "outputId": "c1056ed5-3d40-4b56-d756-a4f591abe550",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\"this is a pen\\n\"\n"
+            "[\"[1 (2) 3,4 [8]]\"]\n"
           ]
         }
       ]
@@ -6580,7 +6581,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6604,7 +6605,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
